@@ -2,7 +2,7 @@
 <plugin_manifest xmlns="http://www.elgg.org/plugin_manifest/1.8">
 	<name>Access Plus</name>
 	<author>Matt Beckett (matt@clever-name.com)</author>
-	<version>1.0</version>
+	<version>1.1</version>
 	<description>Set multiple access collections for an entity</description>
 	<website>http://clever-name.com</website>
 	<copyright>(C) Matt Beckett, 2011</copyright>
