@@ -1,5 +1,8 @@
 Changelog
 
+01/21/2012
+- upgraded deprecated functions for 1.8.3 "deprecation storm"
+
 09/05/2011 - Initial Release tested on 1.8b2
 - General functions checked & upgraded where deprecated
 
